--- a/Dojo_Survey/templates/index.html
+++ b/Dojo_Survey/templates/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Dojo Survey</h1>
     <div>
-        <form action="" method="post">
+        <form action="/results" method="post">
             <p>Your Name:</p> <input type="text" name="name" id="name">
             <p>Dojo Location:</p><input type="text" name="location" id="dojo">
             <p>Favorite Language:</p><input type="text" name="lang" id="lang">
