--- a/Dojo_Survey/templates/results.html
+++ b/Dojo_Survey/templates/results.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/results.css')}}">
     <title>Results</title>
 </head>
 <body>
     <h1>Dojo survey results</h1>
-    
+    <p>Name: {{name}}</p>
+    <p>Dojo Location: {{location}}</p>
+    <p>Favorite Language:  {{language}}</p>
+    <p>Comments:  {{comments}}</p>
     
 </body>
 </html>
