--- a/Ninjas/templates/don.html
+++ b/Ninjas/templates/don.html
@@ -7,6 +7,6 @@
     <title>Ninja</title>
 </head>
 <body>
-    <img src="static/images/donatello.jpg" alt="Teenage mutant ninja turtles">
+    <img src="{{url_for('static', filename='images/donatello.jpg')}}" alt="Teenage mutant ninja turtles">
 </body>
 </html>
