--- a/Ninjas/templates/no_ninja.html
+++ b/Ninjas/templates/no_ninja.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ninja</title>
+    <title>No Ninja Here</title>
 </head>
 <body>
-    <img src="static/images/leonardo.jpg" alt="Teenage mutant ninja turtles">
+    <img src="{{url_for('static', filename='images/notapril.jpg')}}" alt="Not a ninja">
 </body>
 </html>
