--- a/Ninjas/templates/mich.html
+++ b/Ninjas/templates/mich.html
@@ -7,6 +7,6 @@
     <title>Ninja</title>
 </head>
 <body>
-    <img src="static/images/michalangio.jpg" alt="Teenage mutant ninja turtles">
+    <img src="{{url_for('static', filename='images/michelangelo.jpg')}}" alt="Teenage mutant ninja turtles">
 </body>
 </html>
