--- a/Ninjas/templates/ninja.html
+++ b/Ninjas/templates/ninja.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <img src="static/images/tmnt.png" alt="Teenage mutant ninja turtles">
-    <form action="" method="post">
+    <form action="/result" method="post">
         Enter Color: <input type="text" name="color">
     </form>
 </body>
