--- a/Ninjas/templates/result.html
+++ b/Ninjas/templates/result.html
@@ -7,6 +7,6 @@
     <title>Ninja</title>
 </head>
 <body>
-    <img src="{{url_for('static', filename='images/raphael.jpg')}}" alt="Teenage mutant ninja turtles">
+    <img src="{{url_for('static', filename='images/leonardo.jpg')}}" alt="Teenage mutant ninja turtles">
 </body>
 </html>
