--- a/Dojo_Survey/templates/results.html
+++ b/Dojo_Survey/templates/results.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <h1>Dojo survey results</h1>
-    <p>Name: {{name}}</p>
-    <p>Dojo Location: {{location}}</p>
-    <p>Favorite Language:  {{language}}</p>
-    <p>Comments:  {{comments}}</p>
+    <p>Name: {{session['name']}}</p>
+    <p>Dojo Location: {{session['location']}}</p>
+    <p>Favorite Language:  {{session['language']}}</p>
+    <p>Comments:  {{session['comments']}}</p>
     
 </body>
 </html>
