--- a/week_4/email_val/templates/index.html
+++ b/week_4/email_val/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>Email Validatoin</h2>
-    <form action="email" method="post">
+    <form action="email" method="POST">
         <p>Email Address</p><input type="text"><br>
         <input type="submit" value="Submit Email">
     </form>
