--- a/week_4/login_registration/templates/user.html
+++ b/week_4/login_registration/templates/user.html
@@ -8,6 +8,16 @@
     <title>Users</title>
 </head>
 <body>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+                <h3>{{message}}</h3>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+    <p class="list">
+        {{all_user}}
+    </p>
     
 </body>
 </html>
