--- a/week_4/login_registration/templates/index.html
+++ b/week_4/login_registration/templates/index.html
@@ -10,10 +10,11 @@
 <body>
     <h2>Login</h2>
     <form action="" method="post">
-        <p>User Name</p><input type="text"><br>
-        <p>Password</p><input type="text"><br>
+        <p>User Name:</p><input type="text"><br>
+        <p>Password:</p><input type="text"><br>
         <input type="submit" value="Login">
     </form>
+    <a href="/reg">Click to registure</a>
     
 </body>
 </html>
