--- a/week_4/login_registration/templates/index.html
+++ b/week_4/login_registration/templates/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <h2>Login</h2>
-    <form action="" method="post">
-        <p>User Name:</p><input type="text"><br>
-        <p>Password:</p><input type="text"><br>
+    <form action="/login" method="post">
+        <p>User Name:</p><input type="text" name="uname"><br>
+        <p>Password:</p><input type="text" name="pword"><br>
         <input type="submit" value="Login">
     </form>
     <a href="/reg">Click to registure</a>
