--- a/week_4/wall/templates/index.html
+++ b/week_4/wall/templates/index.html
@@ -15,7 +15,7 @@
             {% endfor %}
         {% endif %}
     {% endwith %}
-    <div>
+    <div class="index">
         <h1>Ray's Wall</h1>
         <fieldset>Login
             <form action="/login" method="post">
