--- a/week_6/survey_form/main/apps/survey/templates/survey/index.html
+++ b/week_6/survey_form/main/apps/survey/templates/survey/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Dojo Survey</h1>
     <div>
-        <form action="/survey/results" method="post">
+        <form action="results" method="post">
             {% csrf_token %}
             <p>Your Name:</p> <input type="text" name="name" id="name">
             <p>Dojo Location:</p><input type="text" name="location" id="dojo">
