--- a/week_7/login/main/apps/main/templates/main/index.html
+++ b/week_7/login/main/apps/main/templates/main/index.html
@@ -30,8 +30,9 @@
                 {% csrf_token %}
                 <input type="text" placeholder="First Name" name="first_name"><br>
                 <input type="text" placeholder="Last Name" name="last_name"><br>
-                <input type="text" placeholder="email" name="email"><br>
-                <input type="text" placeholder="password" name="password"><br>
+                <input type="text" placeholder="Email" name="email"><br>
+                <input type="text" placeholder="Password" name="password"><br>
+                <input type="text" placeholder="Confirm Password" name="confirm_password"><br>
                 <input type="submit" value="Register">
             </form>
         </fieldset>
