--- a/week_7/login/main/apps/main/templates/main/index.html
+++ b/week_7/login/main/apps/main/templates/main/index.html
@@ -26,10 +26,10 @@
     {% if messages %}
     <ul class="messages">
         {% for message in messages %}
-        <li>{{ message }}</li>
+        <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
         {% endfor %}
     </ul>
-    {% end if %}
+    {% endif %}
     <div class="register">
         <fieldset >
             <legend>Register</legend>
