--- a/week_7/belt_review/practice/apps/belt/templates/belt/dashboard.html
+++ b/week_7/belt_review/practice/apps/belt/templates/belt/dashboard.html
@@ -11,7 +11,7 @@
 <body>
     <div class="bar">
         <h2>Belt Dashboard</h2>
-        <p><a href="/wall/{{user.id}}">The Wall</a> | <a href="/logout">Sign Out</a></p>
+        <p><a href="/wall">The Wall</a> | <a href="/profile">Profile</a> | <a href="/logout">Sign Out</a></p>
     </div>
     <h1>Welcome {{user.first_name}} {{user.last_name}}</h1>
     <div class="everyone">
